compiler/src/test/resources/golden/errors/derive_nested_missing.dawn
type Inner = | A | B
type Outer = | Outer(i: Inner) derive Show

pub fn main() -> Unit !io = println("x")
