compiler/src/test/resources/golden/errors/derive_nested_missing.err
error: cannot derive Show for `Outer`: field `i` of type Inner is not printable
  --> derive_nested_missing.dawn:2:22
  |
2 | type Outer = | Outer(i: Inner) derive Show
  |                      ^^^^^^^^
  = hint: add `derive Show` to `type Inner`
